<resources>
    <string name="app_name">Unit_Conv</string>
    <string name="stringTitle">Unit Converter</string>
    <string name="stringButtonSelect">Select</string>
    <string name="textUnitType">1. Select Unit Type:</string>
    <string name="textUnit1">2. Select Unit to Convert From:</string>
    <string name="textUnit2">3. Select Unit to Convert to:</string>
    <string name="snackConvAdded">Conversion Added</string>
    <string name="snackCharLimit">Only 10 characters are allowed</string>
    <string name="cup_ml">(\'Cup\', \'Millilitre\', \'284.131\', \'Volume\')</string>
    <string name="tag_conversion">conversion_fragment</string>
    <string name="tag_new_conversion">new_conversion_fragment</string>
    <string name="tag_selection">selection_fragment</string>
    <string name="tag_remove">remove_conversion_fragment</string>
    <string name="conversion_error">Conversion not Added</string>
    <string name="conversion_removed">Conversion Removed</string>
    <string name="empty_conversions">No custom conversions</string>
    <string name="add_name">1. Conversion Name (Alphanumeric):</string>
    <string name="add_unit_to">3. Unit to Convert to (Alphanumeric):</string>
    <string name="add_unit_from">2. Unit to Convert From (Alphanumeric):</string>
    <string name="add_unit_rate">4. Conversion Rate: (e.g. 0.001 or 60)</string>
    <string name="button_rotate">Rotate</string>
    <string name="tab_selection">Unit Selection</string>
    <string name="tab_conversion">Unit Conversion</string>
    <string name="tab_add">Add Conversion</string>
    <string name="tab_remove">Remove Conversion</string>
    <string name="button_remove">Remove</string>
    <string name="no_7">7</string>
    <string name="no_8">8</string>
    <string name="no_9">9</string>
    <string name="no_4">4</string>
    <string name="no_5">5</string>
    <string name="no_6">6</string>
    <string name="no_1">1</string>
    <string name="no_2">2</string>
    <string name="no_3">3</string>
    <string name="del">Del</string>
    <string name="no_0">0</string>
    <string name="decimal">.</string>
    <string name="clear">clear</string>
    <string name="regex">.*[^a-zA-Z0-9\\s].*</string>
    <string name="invalid_input">Invalid input, try again.</string>
    <string name="duplicate_conversion">Conversion of that name already exists</string>
    <string name="limit_reached">You are only allowed 5 custom conversions</string>

</resources>
