<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextUnit1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="numberDecimal"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/textViewUnitToConvertTo"
        app:layout_constraintStart_toStartOf="@+id/textViewUnitToConvertTo"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitToConvertFrom" />

    <EditText
        android:id="@+id/editTextUnit2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:ems="10"
        android:focusable="false"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintStart_toStartOf="@+id/tableLayout"
        app:layout_constraintTop_toBottomOf="@+id/textViewUnitToConvertTo" />

    <TextView
        android:id="@+id/textViewUnitToConvertFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextUnit1"
        app:layout_constraintStart_toStartOf="@+id/editTextUnit1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewUnitToConvertTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editTextUnit2"
        app:layout_constraintStart_toStartOf="@+id/editTextUnit2"
        app:layout_constraintTop_toBottomOf="@+id/editTextUnit1" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextUnit2">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNo7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_7" />

            <Button
                android:id="@+id/buttonNo8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_8" />

            <Button
                android:id="@+id/buttonNo9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_9" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNo4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_4" />

            <Button
                android:id="@+id/buttonNo5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_5" />

            <Button
                android:id="@+id/buttonNo6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_6" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonNo1"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_1" />

            <Button
                android:id="@+id/buttonNo2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_2" />

            <Button
                android:id="@+id/buttonNo3"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_3" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonDel"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/del" />

            <Button
                android:id="@+id/buttonNo0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/no_0" />

            <Button
                android:id="@+id/buttonDecimal"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:text="@string/decimal" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="86dp"
        android:layout_height="44dp"
        android:ems="10"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="@+id/editTextUnit1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextUnit1" />

</androidx.constraintlayout.widget.ConstraintLayout>